# meiOS

./: .clang-format  .clang-tidy  .cmake-format.json  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  LICENSE  README.md  aarch64-unknown-none-softfloat.json  generate_clangd_config.py  generate_register_definitions.py  mei-aarch64.ld  qemu-system-aarch64  registers.yaml  runner.sh
.cargo/: config  config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: code.yml
asm/rpi3/: boot.s  vector_table.s
boot/: CMakeLists.txt  rpi3.S
cmake/: GenerateRegisters.cmake  WarningFlags.cmake  aarch64-none-elf-toolchain.cmake
include/mei/: bitops.h  errors.h  expected.h  kmain.h  print.h  registers.hpp  result.hpp  types.h  write.h
include/mei/cpp/fmt/: color.h  compile.h  core.h  format.h  ranges.h
include/mei/cpp/fmt/impl/: color.h  compile.h  core.h  format-inl.h
include/mei/register/: access.h  access_policy.h  field.h  format.h  mmio.h  register.h
include/mei/utils/: align.hpp  global.h
include/mei/vm/: address.hpp  debug.hpp  memory_map_desc.hpp
include/mei/vm/translation/: control.hpp  desc_ops.hpp  table.hpp
kernel/: Cargo.toml  build.rs
kernel/asm/rpi3/: boot.s  exception.s
kernel/src/: address.rs  boot.rs  error.rs  exception.rs  gic.rs  gpio.rs  kimage.rs  lib.rs  main.rs  mimo.rs  static_bump_alloc.rs  timer.rs  uart.rs  vm.rs
kernel/src/mmu/: translation_table.rs
libmei/: Cargo.toml  build.rs
libmei/.cargo/: config.toml
libmei/src/: address.rs  address_map.rs  bug.rs  error.rs  lib.rs  mimo.rs  vm.rs
libmei/src/arch/: boot.rs  exception.rs  gic.rs  mod.rs  panic.rs  timer.rs  uart.rs
libmei/src/arch/asm/rpi3/: boot.s
libmei/src/cxx/: CMakeLists.txt  bits.h  generator.h  stack_alloc.h  translation_table.cpp  translation_table.h
libmei/src/cxx/cmake/: WarningFlags.cmake  aarch64-none-elf.cmake
libmei/src/cxx/src/: generator.h  stack_alloc.h  translation_table.cpp  translation_table.h
libmei/src/mmu/: generator.h  mod.rs  translation_table.cpp  translation_table.h  translation_table.rs  utils.rs
libmei/src/vm/: alloc.rs  buddy.rs  mod.rs  slab.cc  slab.hpp  slab.rs
link-cplusplus/: Cargo.toml  build.rs
macros/: Cargo.toml  lib.rs
macros/src/: lib.rs
mei/: Cargo.toml  aarch64-unknown-none-softfloat.json  mei-aarch64.ld
mei/.cargo/: config.toml
mei/src/: kimage.rs  main.rs
src/: CMakeLists.txt  arch_regs.rs  board_id.rs  boot.rs  exception.rs  exit.rs  kernel.cpp  kmain.rs  lib.rs  linker.ld  main.rs  mimo.rs  panic.rs  uart.rs
src/libmei/: CMakeLists.txt  dummy.cpp  print.cpp  uart.cpp
src/libmei/arch/: CMakeLists.txt  exception.S  vector_table_defs.h
src/libmei/arch/boot/: CMakeLists.txt  rpi3.S
src/libmei/registers/: CMakeLists.txt  config.yaml  exception.yaml  mmu.yaml  timer.yaml  uart.yaml
src/libmei/registers/test/: CMakeLists.txt  registers_test.cpp  test_regs.yaml
src/mei/: CMakeLists.txt  kernel.cpp  linker.ld
static_init/: Cargo.toml
static_init/src/: lib.rs
tests/: basic_boot.rs  should_panic.rs
