[package]
name = "rutos"
version = "0.1.0"
edition = "2021"
authors = ["Harikrishnan <harikrishnan.prabakaran@gmail.com>"]

[[test]]
name = "should_panic"
harness = false

[dependencies]
bootloader = "0.9.22" # DONOT move to 0.10.x
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]


[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1
