[package]
name = "mei"
version = "0.0.1"
edition = "2021"
authors = ["Harikrishnan <harikrishnan.prabakaran@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic = "0.5"
spin = "0.9.4"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

