[package]
name = "mei"
version = "0.0.1"
edition = "2021"
authors = ["Harikrishnan <harikrishnan.prabakaran@gmail.com>"]

[dependencies]
tock-registers = "0.8.1"
spin = "0.9.4"
qemu-exit = "3.0.1"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[build-dependencies]
cargo-binutils = "0.3.6"
