[package]
name = "mei"
version = "0.0.1"
edition = "2021"
authors = ["Harikrishnan <harikrishnan.prabakaran@gmail.com>"]

[lib]
name = "libmei"
test = false

# Disable unit tests for the kernel binary.
[[bin]]
name = "mei"
path = "src/main.rs"
test = false

[dependencies]
macros = { path = "../macros" }
tock-registers = "0.8.1"
spin = "0.9.4"
qemu-exit = "3.0.1"
aarch64-cpu = "9.2.0"
bitflags = "1.3.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[build-dependencies]
cargo-binutils = "0.3.6"
