[package]
name = "libmei"
version = "0.0.1"
edition = "2021"
authors = ["Harikrishnan <harikrishnan.prabakaran@gmail.com>"]

[features]
no_std = []

[dependencies]
macros = { path = "../macros" }
tock-registers = "0.8.1"
spin = "0.9.4"
qemu-exit = "3.0.1"
aarch64-cpu = "9.2.0"
bitflags = "1.3.2"
cxx = { version = "1.0.86", default-features = false }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dev-dependencies]
rand = { version = "0.8.5", features = ["std"] }
rayon = "1.6.1"

[build-dependencies]
cxx-build = "1.0"
