[package]
name = "libmei"
version = "0.0.1"
edition = "2021"
authors = ["Harikrishnan <harikrishnan.prabakaran@gmail.com>"]

[features]
no_std = []

[dependencies]
macros = { path = "../macros" }
static_init = { path = "../static_init" }
static_assertions = "1.1.0"
tock-registers = "0.8.1"
spin = "0.9.4"
qemu-exit = "3.0.1"
aarch64-cpu = "9.2.0"
bitflags = "1.3.2"
heapless = "0.7.16"
intrusive-collections = { version = "0.9.4", default-features = false, features = [
    "nightly",
] }
modular-bitfield = "0.11.2"

[dev-dependencies]
rand = { version = "0.8.5", features = ["std"] }
rayon = "1.6.1"
