[package]
name = "mei"
version = "0.0.1"
edition = "2021"
authors = ["Harikrishnan <harikrishnan.prabakaran@gmail.com>"]
build = "build.rs"

# Disable unit tests for the kernel binary.
[[bin]]
name = "mei"
test = false

[dependencies]
libmei = { path = "../libmei", features = ["no_std"] }
tock-registers = "0.8.1"
aarch64-cpu = "9.2.0"

[build-dependencies]
cargo-binutils = "0.3.6"

[profile.release]
strip = true    # Automatically strip symbols from the binary.
opt-level = "z" # Optimize for size.
lto = true
